force-app/main/default/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <defaultValue>&quot;YYYY/YY&quot;</defaultValue>
        <label>Academic Year</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Added_Responsability__c</fullName>
        <label>Added Responsability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appraisal_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appraisal Number</label>
        <referenceTo>Appraisal_Objectives__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <formula>IF(TEXT(ActivatedDate)=&quot;&quot;, &quot;Not Approved&quot;,&quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <label>Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retention Bonus</fullName>
                </value>
                <value>
                    <fullName>Relocation Allowance</fullName>
                </value>
                <value>
                    <fullName>Housing Allowance</fullName>
                </value>
                <value>
                    <fullName>Travel Allowance</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Criteria__c</fullName>
        <label>Bonus Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only Student Numbers</fullName>
                    <default>true</default>
                    <label>Only Student Numbers</label>
                </value>
                <value>
                    <fullName>Student Numbers and Objectives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bursaries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Num. Bursaries</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Children_Health_Insurance__c</fullName>
        <label>Children Health Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Health_Insurance__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Effort</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Full_Text_Benefits__c</fullName>
        <formula>IF( Contract_Text_Housing__c &lt;&gt; &quot;&quot;,Contract_Text_Housing__c &amp; BR(),&quot;&quot;)&amp;IF( Contract_Text_Travel__c  &lt;&gt; &quot;&quot;,Contract_Text_Travel__c &amp; BR(),&quot;&quot;)&amp; IF(  Contract_Text_Visa_Cost__c &lt;&gt; &quot;&quot;,Contract_Text_Visa_Cost__c  &amp; BR(),&quot;&quot;)&amp; IF(  Other_Benefit__c &lt;&gt; &quot;&quot;,&quot;- &quot;&amp;Other_Benefit__c &amp; BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Full Text Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Bonus__c</fullName>
        <formula>IF(Perfomance_Bonus__c&gt;0, &quot;- Bonus of up to &quot; &amp;  Copy_Bonus_Seperator__c  &amp; &quot; &quot; &amp; TEXT( CurrencyIsoCode ) &amp; &quot; at the discretion of the Board/Headteacher based on agreed objectives&quot;&amp;BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Bonus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Bursaries__c</fullName>
        <formula>IF ( TEXT(Num_Bursaries__c )=&quot;&quot;,&quot;&quot;,IF ( TEXT(Num_Bursaries__c )= &quot;0&quot;,&quot;&quot;,IF ( TEXT(Num_Bursaries__c )= &quot;1&quot;,&quot;- A Bursary for 1 child at the school of employment covering Enrolment and Tuition Fees&quot;&amp;BR(),  &quot;- A Bursary for &quot; &amp; TEXT( Num_Bursaries__c)&amp; &quot; children at the school of employment covering Enrolment and Tuition Fees&quot;&amp;BR())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Bursaries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_End_Date__c</fullName>
        <formula>TEXT(DAY( Contract_End_Date__c )) + &quot;/&quot; + 
TEXT(MONTH( Contract_End_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Contract_End_Date__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Health__c</fullName>
        <formula>IF( Health_Insurance__c =FALSE,&quot;&quot;, IF(AND( TEXT(Partner_Health_Insurance__c)=&quot;YES&quot;, TEXT(Children_Health_Insurance__c )=&quot;&quot;),  &quot;- International Health Insurance for Employee and designated parter&quot;&amp;BR(),IF(AND( TEXT(Partner_Health_Insurance__c)=&quot;NO&quot;, TEXT(Children_Health_Insurance__c )=&quot;&quot;),  &quot;- International Health Insurance &quot;&amp;BR(),IF(AND( TEXT(Partner_Health_Insurance__c)=&quot;&quot;, TEXT(Children_Health_Insurance__c )=&quot;&quot;),  &quot;- International Health Insurance&quot;&amp;BR(), IF(AND( TEXT(Partner_Health_Insurance__c)=&quot;&quot;, TEXT(Children_Health_Insurance__c )=&quot;1&quot;),  &quot;- International Health Insurance  for Employee and 1 child&quot;&amp;BR(),IF(AND( TEXT(Partner_Health_Insurance__c)=&quot;&quot;, TEXT(Children_Health_Insurance__c )&lt;&gt;&quot;&quot;,TEXT(Children_Health_Insurance__c )&lt;&gt;&quot;1&quot;),  &quot;- International Health Insurance  for Employee and &quot; &amp; TEXT(Children_Health_Insurance__c)&amp;&quot; Children&quot;&amp;BR(),IF(AND( TEXT(Partner_Health_Insurance__c)=&quot;YES&quot;, TEXT(Children_Health_Insurance__c )&lt;&gt;&quot;&quot;,TEXT(Children_Health_Insurance__c )&lt;&gt;&quot;1&quot;),  &quot;- International Health Insurance for Employee, designated partner and &quot; &amp; TEXT(Children_Health_Insurance__c)&amp;&quot; Children&quot;&amp;BR(),&quot;- International Health Insurance for Employee, designated parter and &quot;&amp;TEXT(Children_Health_Insurance__c)&amp;&quot; children&quot;&amp;BR())))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Housing__c</fullName>
        <formula>IF(Housing__c=TRUE, &quot;- Housing in accordance to School Policy&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Housing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Relocation__c</fullName>
        <formula>IF( Relocation_Allowance__c =TRUE, &quot;- Relocation Allowance in accordance to School Policy&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Relocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Retention_Bonus__c</fullName>
        <formula>IF( Retention_Bonus_Amount__c &gt;0, &quot;- A Retention Bonus of up to&quot; &amp; &quot; &quot; &amp;  Copy_Retention_Bonus_Seperator__c  &amp;&quot; &quot; &amp; TEXT( CurrencyIsoCode ) &amp; &quot; &quot;  &amp; &quot;in accordance with School Policy&quot;&amp;BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Retention Bonus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Salary__c</fullName>
        <formula>IF( Salary__c &gt;0, &quot;- Salary of &quot; &amp;  Copy_Salary_Seperator__c  &amp; &quot; &quot; &amp; TEXT( CurrencyIsoCode ) &amp; &quot; &quot; &amp; TEXT(  Type__c ) &amp; &quot; per year&quot;&amp; BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Salary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Start_Date__c</fullName>
        <formula>TEXT(DAY(StartDate)) + &quot;/&quot; + 
TEXT(MONTH( StartDate )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(StartDate)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Travel__c</fullName>
        <formula>IF( Travel_Allowance__c =TRUE,&quot;- Travel Allowance in accordance with School Policy&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Travel Allowance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Text_Visa_Cost__c</fullName>
        <formula>IF( Visa_Costs__c =TRUE, &quot;- Visa expenses excluding cost of travel to Embassies/Consulates&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Text Visa Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bonus_Seperator__c</fullName>
        <formula>IF(Salary__c&lt; 1000, TEXT( Perfomance_Bonus__c ), 
IF(Salary__c &lt; 1000000, TEXT(FLOOR(Perfomance_Bonus__c /1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Perfomance_Bonus__c ), 3), 
IF(Perfomance_Bonus__c &lt; 1000000000, TEXT(FLOOR(Perfomance_Bonus__c /1000000)) &amp; &apos;,&apos; &amp; TEXT(FLOOR(MOD(Perfomance_Bonus__c ,1000000)/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Perfomance_Bonus__c ), 3), &quot;Error:Number Greater Than 999,999,999&quot;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Bonus Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Retention_Bonus_Seperator__c</fullName>
        <formula>IF(Salary__c&lt; 1000, TEXT(  Retention_Bonus_Amount__c  ), 
IF(Salary__c &lt; 1000000, TEXT(FLOOR(Retention_Bonus_Amount__c  /1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Retention_Bonus_Amount__c ), 3), 
IF(Retention_Bonus_Amount__c &lt; 1000000000, TEXT(FLOOR(Retention_Bonus_Amount__c /1000000)) &amp; &apos;,&apos; &amp; TEXT(FLOOR(MOD(Retention_Bonus_Amount__c  ,1000000)/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Retention_Bonus_Amount__c ), 3), &quot;Error:Number Greater Than 999,999,999&quot;) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Retention Bonus Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Salary_Seperator__c</fullName>
        <formula>IF(Salary__c&lt; 1000, TEXT(Salary__c),
  IF(Salary__c &lt; 1000000, TEXT(FLOOR(Salary__c/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Salary__c), 3),
    IF(Salary__c &lt; 1000000000, TEXT(FLOOR(Salary__c/1000000)) &amp; &apos;,&apos; &amp; TEXT(FLOOR(MOD(Salary__c,1000000)/1000)) &amp; &apos;,&apos; &amp; RIGHT(TEXT(Salary__c), 3), &quot;Error:Number Greater Than 999,999,999&quot;)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Salary Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Staff_Member_Capitalised__c</fullName>
        <formula>UPPER(  Account.FirstName )&amp;&quot; &quot;&amp;UPPER( Account.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Staff Member Capitalised</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Status__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Health_Insurance__c</fullName>
        <label>Cost of Health Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Housing__c</fullName>
        <label>Cost of Housing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Other_Benefits__c</fullName>
        <label>Cost of Other Benefits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Points__c</fullName>
        <label>Cost of Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_Type__c</fullName>
        <label>Holidays Day Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Working Days</fullName>
                    <default>true</default>
                    <label>Working Days</label>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <formula>If( OR(TEXT(Status) =&quot;draft&quot;,TEXT(Status) =&quot;Awaiting Approval&quot;) ,&quot;DRAFT VERSION&quot;&amp;BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holidays_Non_Academic_Staff_Only__c</fullName>
        <label>Holidays (Admin/Support  Staff)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Housing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Approver__c</fullName>
        <formula>Account.Main_Approver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternity_Leave_Calendar_Days__c</fullName>
        <label>Maternity Leave (Calendar Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Bursaries__c</fullName>
        <label>Bursaries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objectives_Target_Achieved__c</fullName>
        <formula>Objectives_in_Appraisal__r.Objectives_Achieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objectives Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Objectives_in_Appraisal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objectives in Appraisal</label>
        <referenceTo>Appraisal_Objectives__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Benefit__c</fullName>
        <label>Other Benefit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Health_Insurance__c</fullName>
        <label>Partner Health Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Health_Insurance__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfomance_Bonus__c</fullName>
        <label>Perfomance Bonus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_in_Contract__c</fullName>
        <label>Position in Contract</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relocation Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relocation_Cost__c</fullName>
        <label>Relocation Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Responsibility_Points__c</fullName>
        <label>Responsibility Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resulting_Performance_Bonus__c</fullName>
        <formula>IF(TEXT( Bonus_Criteria__c )=&quot;Only Student Numbers&quot;,Perfomance_Bonus__c * Student_Target_Achieved__c ,IF(TEXT( Bonus_Criteria__c )=&quot;Student Numbers and Objectives&quot;,Perfomance_Bonus__c * Student_Target_Achieved__c * Objectives_Target_Achieved__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resulting Performance Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retention_Bonus_Amount__c</fullName>
        <label>Retention Bonus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sick_Days__c</fullName>
        <label>Sick Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Students This Year</label>
        <referenceTo>Bonus_Table__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Target_Achieved__c</fullName>
        <formula>Student_Table__r.Resulting_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Students_Previous_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Students Previous Year</label>
        <referenceTo>Bonus_Table__c</referenceTo>
        <relationshipLabel>Contracts (Target Students Previous Year)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxes_Paid_by_School__c</fullName>
        <label>Taxes Paid by School</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Year</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>Indefinite</fullName>
                </value>
                <value>
                    <fullName>Revolving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost_of_Health_Insurance__c + Cost_of_Housing__c +  Cost_of_Other_Benefits__c + Visa_Costs_Amount__c + Relocation_Cost__c + Salary__c + Retention_Bonus_Amount__c + Travel_Allowance_Cost__c + Taxes_Paid_by_School__c +  Cost_of_Points__c + Perfomance_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Package Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Allowance_Cost__c</fullName>
        <label>Travel Allowance Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Allowance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Allowance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                    <default>true</default>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visa_Costs_Amount__c</fullName>
        <label>Visa Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Visa_Costs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Costs</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Format_Academic_Year</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEN( Academic_Year__c ) = 7, FALSE, TRUE)</errorConditionFormula>
        <errorMessage>Format for Academic Year should be YYYY/YY. For example 2012/13</errorMessage>
    </validationRules>
</CustomObject>